--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,12 @@
 -r requirements.txt
+black==19.3b0
+flake8==3.7.8
+isort==4.3.21
+lxml==4.4.1
+mypy==0.720
+pre-commit==1.18.3
+pre-commit-hooks==2.3.0
 pytest==5.1.1
 pytest-cov==2.7.1
 pytest-django==3.5.1
+typecov==0.2.1
