--- a/mypy.ini
+++ b/mypy.ini
@@ -5,6 +5,9 @@ html_report = ./htmltypecov
 linecount_report = ./typecov
 ignore_missing_imports = True
 
+[mypy-*.migrations.*]
+ignore_errors = True
+
 [mypy-alembic.*]
 ignore_missing_imports = True
 
